# AllFileDown

./: .gitignore  PLAN.md  pyproject.toml  requirements.txt
app/: __main__.py  config.py  database.py  main.py  security.py
app/agent/: checksum.py  downloader.py  filescan.py  fileserver.py  heartbeat.py  logviewer.py  notifier.py  orchestrator.py  p2p.py  role.py  seeding.py  storage.py  sync.py  tags.py  throttle.py
app/api/: routes.py
app/web/: passkey.py  routes.py
app/web/static/: app.js  style.css  style.css.bak.ol
app/web/templates/: base.html  downloads.html  files.html  index.html  login.html  nodes.html  settings.html  setup.html  stations.html
app/web/templates/test-ui/: test.html
app/web/vue/src/: App.vue
docs/superpowers/plans/: 2026-05-27-first-run-setup.md
docs/superpowers/specs/: 2026-05-27-first-run-setup-design.md
tests/: __init__.py  test_config.py  test_database.py  test_fileserver_security.py  test_security.py  test_utils.py  test_web_security.py  test_web_setup.py
